<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_cadastrachecklist"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_cadastrachecklist"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="wrap_content"
            app:title="@string/title_CadastraChecklistsActivity"
            app:titleTextColor="@color/common_google_signin_btn_text_dark_default"
            android:layout_weight="1"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            android:id="@+id/activity_cadastra_checklists"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.weebly.taggtracker.tagtracker.CadastraChecklistsActivity">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="50dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:paddingBottom="0dp">

                <TextView
                    android:text="Adicionar Checklist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAddChecklist"
                    android:paddingTop="50dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtTitleChecklist"
                    android:contentDescription="Título da Checklist" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAvisoCadastraChecklist"
                    android:textColorLink="@color/warning"
                    android:textColor="@color/warning"
                    android:visibility="invisible" />

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="215dp"
                    android:id="@+id/listviewAddTags"
                    android:layout_marginBottom="30dp"
                    android:layout_centerHorizontal="true"
                    android:choiceMode="multipleChoice"
                    android:scrollbars="vertical"
                    android:fadeScrollbars="false"
                    android:soundEffectsEnabled="true" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:text="Salvar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnSalvarChecklist"
                        android:layout_weight="1" />

                    <Button
                        android:text="Cancelar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnCancelarChecklist"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
