<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.weebly.taggtracker.tagtracker.TelaInicialActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                layout="@layout/tool_bar"
                android:id="@+id/toolbar_cadastrachecklist" />

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CHECKLISTS"

                    android:id="@+id/tab_checklists" />

                <android.support.design.widget.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TAGS"
                    android:id="@+id/tag_tags" />

            </android.support.design.widget.TabLayout>

        </android.support.design.widget.AppBarLayout>

        <view
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            class="android.support.v4.view.ViewPager"
            android:id="@+id/pager" />

    </LinearLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:tint="#ffffff"
        app:backgroundTint="?android:attr/colorAccent"
        android:onClick="abreMenu" />

    <!-- View pager to swipe views -->

</android.support.design.widget.CoordinatorLayout>
