<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lista_checklists"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Lista de checklists" />
        <item
            android:id="@+id/nav_como_usar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Como usar" />
        <item
            android:id="@+id/nav_compra_tags"
            android:icon="@drawable/ic_menu_manage"
            android:title="Compra de tags" />

        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_manage"
            android:title="Sobre o TAGTRACKER" />

        <item
            android:id="@+id/nav_premium"
            android:icon="@drawable/ic_menu_manage"
            android:title="TAGTRACKER Premium" />


    </group>

</menu>
